@@ -92,9 +92,9 @@ Use more than once to increase output further.
 .B -V,\ --version
 Prints out the versions of DejaGnu, Expect and Tcl.
 .TP
-.B -x,\ --xml[=FILE]
-Generate XML output.  \fBFILE\fR is optional; if given it is the name of
-the output file.  If not given, the output file is named after the tool.
+.B -x,\ --xml
+Generate XML output.  The output file is named after the tool with
+an .xml extension.
 .TP
 .B -D[number]
 Activate the Tcl debugger.  \fBnumber\fR can be either 1 or 0. If it
