@@ -55,7 +55,6 @@ proc open_logs { } {
     global tool
     global sum_file
     global xml_file
-    global xml_file_name
     global xml
 
     if { ${tool} ==  "" } {
@@ -65,10 +64,7 @@ proc open_logs { } {
     set sum_file [open [file join $outdir $tool.sum] w]
     if { $xml } {
 	catch "file delete -force -- $outdir/$tool.xml"
-	if { ![string compare $xml_file_name ""] } {
-	    set xml_file_name $tool.xml
-	}
-	set xml_file [open [file join $outdir $xml_file_name] w]
+	set xml_file [open [file join $outdir $tool.xml] w]
 	xml_output "<?xml version=\"1.0\"?>"
 	insertdtd
 	xml_output "<testsuite>"
