@@ -53,8 +53,7 @@ set kfail_flag  0		;# indicates that it is a known failure
 set kfail_prms	0		;# bug id for the description of the known failure
 set sum_file	""		;# name of the file that contains the summary log
 set base_dir	""		;# the current working directory
-set xml_file_name ""		;# name of the xml output if requested
-set xml_file    ""              ;# handle on the xml file if requested
+set xml_file    ""              ;# handle on the XML file if requested
 set xml         0               ;# flag for requesting xml
 set logname     ""		;# the users login name
 set prms_id	0               ;# GNATS prms id number
@@ -398,7 +397,7 @@ proc usage { } {
     send_user "\t--tool_opts \[options\]\tA list of additional options to pass to the tool\n"
     send_user "\t--verbose, -v\t\tProduce verbose output\n"
     send_user "\t--version, -V\t\tPrint all relevant version numbers\n"
-    send_user "\t--xml\[=name\], -x\tTurn on XML output generation\n"
+    send_user "\t--xml, -x\t\tWrite out an XML results file\n"
     send_user "\t--D\[0-1\]\t\tTcl debugger\n"
     send_user "\tscript.exp\[=arg(s)\]\tRun these tests only\n"
     if { [info exists tool] } {
@@ -1170,7 +1169,6 @@ for { set i 0 } { $i < $argc } { incr i } {
 	}
 
 	"--x*" {
-	    set xml_file_name $optarg
 	    set xml 1
 	    verbose "XML logging turned on"
 	    continue
